--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.0",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
   }
 }
